<resources>
    <string name="app_name">CalTracker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="username">"Username"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="male">"Male"</string>
    <string name="female">"Female"</string>
    <string name="Account_name">"Account name"</string>
    <string name="loa">"Level of Activity:"</string>
    <string name="dob">"Birthday"</string>
    <string name="height">"Height(m)"</string>
    <string name="weight">"Weight(kg)"</string>
    <string name="address">"Address"</string>
    <string name="SPM">"Steps per mile"</string>
    <string name="signUp">"Sign up"</string>
    <string name="clear">"Clear"</string>
    <string name="postcode">"Postcode"</string>
    <string name="name">"Name"</string>
    <string name="surname">"Surname"</string>
    <string name="title_activity_home">Calorie Tacker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>
</resources>
